--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "npx nodemon --exec ts-node --files src/index.ts",
     "start": "node src/index.ts",
     "typeorm": "npx ts-node ./node_modules/typeorm/cli.js",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest --watch --silent --forceExit"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -16,8 +16,11 @@
     "@types/jsonwebtoken": "^8.5.1",
     "jest": "^27.0.5",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.2"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.3.2",
+    "win-node-env": "^0.5.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
